--- a/solver/model/modelStats.ipynb
+++ b/solver/model/modelStats.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from solverModel import SolverModel, DataProcessing\n",
+    "from solverModel import SolverModel, DataProcessing, KNN\n",
     "import sklearn.metrics as metrics\n",
     "from pretty_confusion_matrix import pp_matrix\n",
     "import pandas as pd\n",
@@ -373,10 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from solverModel import SolverModel, DataProcessing, KNN, myThread\n",
+    "X_train, y_train, X_test, y_test = DataProcessing.prepareTrainTestSet()\n",
+    "knn = KNN(5, 2)\n",
+    "knn.fit(X_train, y_train)\n",
+    "score = knn.startScoreMultiThreaded(X_test, y_test)"
+   ]
   }
  ],
  "metadata": {
