--- a/solver/model/modelStats.ipynb
+++ b/solver/model/modelStats.ipynb
@@ -373,16 +373,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Model Created\n",
+      "INFO:root:Model fitted\n"
+     ]
+    }
+   ],
    "source": [
-    "from solverModel import SolverModel, DataProcessing, KNN, myThread\n",
+    "from solverModel import SolverModel, DataProcessing\n",
     "X_train, y_train, X_test, y_test = DataProcessing.prepareTrainTestSet()\n",
-    "knn = KNN(5, 2)\n",
-    "knn.fit(X_train, y_train)\n",
+    "knn = SolverModel(5, 2)\n",
+    "knn.fitModel()\n",
     "# score = knn.startScoreMultiThreaded(X_test, y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Karol\\Documents\\GitHub\\Mathematical-Equation-Solver\\solver\\model\\modelStats.ipynb Cell 14'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Karol/Documents/GitHub/Mathematical-Equation-Solver/solver/model/modelStats.ipynb#ch0000015?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(knn\u001b[39m.\u001b[39;49mpredict(X_test[\u001b[39m0\u001b[39;49m]))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Karol/Documents/GitHub/Mathematical-Equation-Solver/solver/model/modelStats.ipynb#ch0000015?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(y_test[\u001b[39m0\u001b[39m])\n",
+      "File \u001b[1;32mc:\\Users\\Karol\\Documents\\GitHub\\Mathematical-Equation-Solver\\solver\\model\\solverModel.py:85\u001b[0m, in \u001b[0;36mSolverModel.predict\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m     <a href='file:///c%3A/Users/Karol/Documents/GitHub/Mathematical-Equation-Solver/solver/model/solverModel.py?line=82'>83</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__fitted:\n\u001b[0;32m     <a href='file:///c%3A/Users/Karol/Documents/GitHub/Mathematical-Equation-Solver/solver/model/solverModel.py?line=83'>84</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mModel not fitted\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='file:///c%3A/Users/Karol/Documents/GitHub/Mathematical-Equation-Solver/solver/model/solverModel.py?line=84'>85</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__clf\u001b[39m.\u001b[39;49mpredict(data)\n",
+      "File \u001b[1;32mc:\\Users\\Karol\\Documents\\GitHub\\Mathematical-Equation-Solver\\solver\\model\\solverModel.py:128\u001b[0m, in \u001b[0;36mKNN.predict\u001b[1;34m(self, points)\u001b[0m\n\u001b[0;32m    <a href='file:///c%3A/Users/Karol/Documents/GitHub/Mathematical-Equation-Solver/solver/model/solverModel.py?line=125'>126</a>\u001b[0m result \u001b[39m=\u001b[39m []\n\u001b[0;32m    <a href='file:///c%3A/Users/Karol/Documents/GitHub/Mathematical-Equation-Solver/solver/model/solverModel.py?line=126'>127</a>\u001b[0m \u001b[39mfor\u001b[39;00m sample, sampleLabel \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf\u001b[39m.\u001b[39mvalues(), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlabel\u001b[39m.\u001b[39mvalues()):\n\u001b[1;32m--> <a href='file:///c%3A/Users/Karol/Documents/GitHub/Mathematical-Equation-Solver/solver/model/solverModel.py?line=127'>128</a>\u001b[0m     result\u001b[39m.\u001b[39mappend([KNN\u001b[39m.\u001b[39mdst(sample, point, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mm), sampleLabel])\n\u001b[0;32m    <a href='file:///c%3A/Users/Karol/Documents/GitHub/Mathematical-Equation-Solver/solver/model/solverModel.py?line=128'>129</a>\u001b[0m result\u001b[39m.\u001b[39msort(key\u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m x: x[\u001b[39m0\u001b[39m])\n\u001b[0;32m    <a href='file:///c%3A/Users/Karol/Documents/GitHub/Mathematical-Equation-Solver/solver/model/solverModel.py?line=129'>130</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mk):\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "print([knn.predict(X_test[0])])\n",
+    "print(y_test[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
