--- a/solver/model/modelStats.ipynb
+++ b/solver/model/modelStats.ipynb
@@ -10,7 +10,7 @@
     "import sklearn.metrics as metrics\n",
     "from pretty_confusion_matrix import pp_matrix\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
+    "# import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import io\n",
     "from PIL import Image"
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,20 @@
     "X_train, y_train, X_test, y_test = DataProcessing.prepareTrainTestSet()\n",
     "knn = KNN(5, 2)\n",
     "knn.fit(X_train, y_train)\n",
-    "score = knn.startScoreMultiThreaded(X_test, y_test)"
+    "# score = knn.startScoreMultiThreaded(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted=knn.predict(X_test)\n",
+    "df_cm = pd.DataFrame(metrics.confusion_matrix(y_test, predicted), index=range(10), columns=range(10))\n",
+    "pp_matrix(df_cm, cmap=\"magma\")\n",
+    "print(metrics.classification_report(y_test,predicted))\n",
+    "# print(y_test[:10], knn.predict(X_test[:10]), sep=\"\\n\")"
    ]
   }
  ],
